--- a/deel-2-flexbox-layout/opdracht-2/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-2/styles/styles.css
@@ -1,1 +1,34 @@
 /*Schrijf hier jouw CSS*/
+body {
+    display: flex;
+    flex-direction: row;
+    /*border: 5px solid lightgray;*/
+    min-height: 100vh;
+}
+/*nav*/
+.col-1 {
+flex-basis: 30vh;
+}
+/*div*/
+.col-2 {
+    display: flex;
+    flex-direction: column;
+    /*border: 5px solid lightgray;*/
+    flex-basis:100% ;
+}
+
+header {
+    flex-basis: 20%;
+}
+main {
+    display: flex;
+    flex-direction: column;
+    /*border:5px solid white;*/
+    min-height: 60%;
+}
+footer {
+    flex-basis: 20%;
+}
+article {
+    flex-basis: 100%;
+}
