--- a/deel-2-flexbox-layout/opdracht-3/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-3/styles/styles.css
@@ -1,1 +1,41 @@
 /*Schrijf hier jouw CSS*/
+
+
+body {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+
+}
+main {
+    display: flex;
+    flex-direction: row;
+    /*border:5px solid black;*/
+    height: 60%
+}
+
+.col-2 {
+    display: flex;
+    flex-direction: column;
+    /*border: 5px solid gray;*/
+    flex-basis: 80vw;
+}
+
+.col-1 {
+flex-basis: 20vw;
+}
+header {
+    flex-basis: 20%;
+}
+footer {
+    flex-basis: 20%;
+}
+
+article {
+    flex-basis:80%;
+}
+aside {
+    flex-basis: 20%;
+    flex-grow; 0;
+    flex-shrink: 0;
+}
