--- a/deel-2-flexbox-layout/opdracht-5/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-5/styles/styles.css
@@ -1,1 +1,44 @@
-/*Schrijf hier jouw CSS*/
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    /*border: 5px solid black;*/
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    /*border: 5px solid red;*/
+    flex-basis: 60vh;
+}
+
+header {
+    flex-basis: 20vh;
+}
+
+nav {
+    flex-basis: 20vw;
+    height: 100%;
+    order: 1;
+}
+
+article {
+    flex-basis: 60%;
+    height: 100%;
+    order: 2;
+}
+
+aside {
+    flex-basis: 20vw;
+    height: 100%;
+    order: 3;
+}
+
+footer {
+    flex-basis: 20vh;
+}
+
+nav, header, aside, footer {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
